<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Healthy Fur</string>
    <string name="transaksi_grooming">Transaksi Grooming</string>
    <string name="nama_pelanggan">Nama pelanggan</string>
    <string name="nomor_telepon">Nomor telepon</string>
    <string name="nama_hewan">Nama hewan</string>
    <string name="jenis_hewan">Jenis hewan</string>
    <string name="anjing">Anjing</string>
    <string name="kucing">Kucing</string>
    <string name="ras">Ras</string>
    <string name="warna_hewan">Warna hewan</string>
    <string name="berat_hewan_kg">Berat hewan (kg)</string>
    <string name="jenis_layanan">Jenis layanan</string>
    <string name="tambah">Tambah</string>
    <string name="batal">Batal</string>

    <string-array name="array_ras_anjing">
        <item>Beagle</item>
        <item>Bulldog</item>
        <item>Dachshund</item>
        <item>Domestik</item>
        <item>German Shepherd</item>
        <item>Golden Retriever</item>
        <item>Labrador</item>
        <item>Pudel</item>
        <item>Rottweiler</item>
    </string-array>

    <string-array name="array_ras_kucing">
        <item>Anggora</item>
        <item>Beagle</item>
        <item>Bengal</item>
        <item>British Shorthair</item>
        <item>Domestik</item>
        <item>Maine Coon</item>
        <item>Persia</item>
        <item>Ragdoll</item>
        <item>Siamese</item>
        <item>Sphinx</item>
    </string-array>

    <string-array name="array_jenis_layanan">
        <item>Grooming sehat</item>
        <item>Grooming kutu</item>
        <item>Grooming jamur</item>
        <item>Grooming lengkap</item>
    </string-array>

    <string name="nama_pelanggan_invalid">Nama pelanggan tidak boleh kosong.</string>
    <string name="nomor_telepon_invalid">Nomor telepon tidak boleh kosong.</string>
    <string name="nama_hewan_invalid">Nama hewan tidak boleh kosong.</string>
    <string name="jenis_hewan_invalid">Jenis hewan tidak boleh kosong.</string>
    <string name="ras_invalid">Ras tidak boleh kosong.</string>
    <string name="warna_invalid">Warna tidak boleh kosong.</string>
    <string name="berat_hewan_invalid">Berat hewan tidak boleh kosong.</string>
    <string name="jenis_layanan_invalid">Jenis layanan tidak boleh kosong.</string>

    <string name="nama_pelanggan_x">Nama pelanggan: %1$s</string>
    <string name="nama_hewan_x">Nama hewan: %1$s</string>
    <string name="jenis_hewan_x">Jenis hewan: %1$s</string>
    <string name="berat_hewan_x" tools:ignore="ExtraTranslation">Berat hewan: %1$s kg</string>
    <string name="jenis_layanan_x" tools:ignore="ExtraTranslation">Jenis layanan: %1$s</string>
    <string name="durasi_x" tools:ignore="ExtraTranslation">Durasi: %1$s menit</string>
    <string name="biaya_x" tools:ignore="ExtraTranslation">Biaya: Rp %1$s</string>

    <string name="belum_ada_data">Belum ada data.</string>
    <string name="histori">Histori</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="konfirmasi_hapus_item">Hapus histori %1$s?</string>

    //Untuk layout detail
    <string name="title_detail">Detail Transaksi</string>
    <string name="id_detail">ID</string>
    <string name="tanggal_detail">Tanggal</string>
    <string name="durasi_detail">Durasi</string>
    <string name="biaya_detail">Biaya</string>
    <string name="bagikan">Bagikan</string>
    <string name="bagikan_template">ID: %1$s\nTanggal: %2$s\nNama pelanggan: %3$s\nNama hewan: %4$s
        \nJenis hewan: %5$s\nRas: %6$s\nBerat: %7$s Kg\nJenis layanan: %8$s\nDurasi: %9$s menit
        \nBiaya: Rp %10$s</string>

    <string name="switch_layout">Ubah tampilan</string>
    <string name="nama_layanan">Grooming Jamur</string>
    <string name="deskripsi_layanan">Grooming yang dikhususkan untuk hewan yang memiliki masalah dengan jamur di badannya.</string>
    <string name="message">%1$s diklik!</string>
    <string name="koneksi_error">Koneksi error</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data info jenis layanan otomatis</string>
    <string name="notif_title">Ada info jenis layanan baru nihh!</string>
    <string name="notif_text">Ayo buruan cek, supaya ga ketinggalan infonya!!!</string>

</resources>